--- a/nftdao/public/index.html
+++ b/nftdao/public/index.html
@@ -44,4 +44,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    document.body.style = 'background: radial-gradient(circle at 6.6% 12%, rgb(64, 0, 126) 20.8%, rgb(0, 255, 160) 100.2%);';
+  </script>
 </html>
